# gpt-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
data/shakespeare_char/: prepare.py
models/: gpt.py
notebooks/: lm1.ipynb  lm2.ipynb
src/gpt_trainer/: __init__.py  train.py
src/gpt_trainer/models/: gpt.py
