[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-experiments"
version = "0.1.0"
description = "Small char-level language model experiments"
readme = "README.md"
license = {text = "MIT or see project"}
dependencies = [
  "torch>=1.12.0",
  "numpy>=1.21",
  "tqdm>=4.64",
]
